src/test/deca/context/invalid/ContextAvecObjet/DeclClass/doubleDefClassNoExtends.deca
// Description:
//    Double définition d'une classe
//
// Resultats:
//    Erreur contextuelle
//    Une telle classe est déjà définie

class A {}
class A {}